# automotive_diag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile  release-plz.toml
.cargo-husky/hooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release-plz.yml
src/: comm_control.rs  comm_level.rs  commands.rs  communication_control.rs  communication_level.rs  errors.rs  lib.rs  read_dtc_information.rs  reset_types.rs  scaling_byte.rs  scaling_byte_ext.rs  scaling_byte_high.rs  security_access.rs  session_types.rs  utils.rs
src/doip/: action_code.rs  activation_code.rs  activation_type.rs  diagnostic_ack.rs  diagnostic_nack.rs  mod.rs  nack_code.rs  node_type.rs  payload_type.rs  power_mode.rs  protocol_version.rs  sync_status.rs
src/kwp2000/: commands.rs  errors.rs  mod.rs  reset_types.rs  routine_exit_status.rs  session_types.rs
src/kwp2k/: commands.rs  errors.rs  reset_types.rs  session_types.rs
src/obd2/: command_2nd_air_status.rs  commands.rs  data_pids.rs  errors.rs  fuel_system_status.rs  fuel_types.rs  mod.rs  obd_standard.rs  service09.rs
src/uds/: comm_control.rs  comm_level.rs  commands.rs  errors.rs  mod.rs  nrc.rs  read_dtc_information.rs  reset_types.rs  routine.rs  scaling_byte.rs  scaling_byte_ext.rs  security_access.rs  session_types.rs
