[package]
name = "automotive_diag"
version = "0.1.24"
description = "Unified Diagnostic Services/UDS (ISO-14229-1), KWP2000 (ISO-142330), OBD-II (ISO-9141), and DoIP (ISO-13400) definitions to communicate with the road vehicle ECUs in Rust."
authors = [
    "Yuri Astrakhan <YuriAstrakhan@gmail.com>",
    "Ashcon Mohseninia <ashconm@outlook.com>",
]
repository = "https://github.com/oxibus/automotive_diag"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["uds", "kwp2000", "obd", "automotive", "no_std"]
categories = ["embedded", "no-std", "encoding", "parsing"]
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "iter", "display", "kwp2000", "obd2", "uds"]
# Include support for std library. Without this feature, uses `no_std` attribute
std = ["displaydoc?/default", "serde?/default", "strum/default"]
# Add support for `defmt` logging
defmt = ["dep:defmt"]
# Add Display trait for all enums, using doc comments as display strings.
display = ["dep:displaydoc"]
# Add Enum::iter() implementation for all enums
iter = []
# Generate Python bindings for enums using pyo3. Requires std.
pyo3 = ["std", "dep:pyo3"]
# Include support for serde serialization
serde = ["dep:serde"]
# Include support for DoIP - ISO-13400. This feature is unstable and is not enabled by default.
doip = []
# Include support for Keyword protocol 2000 - ISO-142330
kwp2000 = []
with-kwp2000 = ["kwp2000"] # deprecated, use `kwp2000` instead
# Include support for On-board diagnostics - ISO-9141
obd2 = []
with-obd2 = ["obd2"] # deprecated, use `obd2` instead
# Include support for Unified Diagnostic Services - ISO-14229-1
uds = []
with-uds = ["uds"] # deprecated, use `uds` instead

[dependencies]
defmt = { version = "1.0.1", optional = true }
displaydoc = { version = "0.2", optional = true, default-features = false }
pyo3 = { version = "0.26.0", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
strum = { version = "0.27.0", default-features = false, features = ["derive"] }

[dev-dependencies]
insta = "1.43.1"
serde_json = { version = "1", features = ["preserve_order"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
# Restrictions
panic_in_result_fn = "warn"
todo = "warn"
unwrap_used = "warn"
# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
redundant_feature_names = "allow"  # All with-* features have been deprecated. Remove this once they are removed
unsafe_derive_deserialize = "allow"
